--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
-- '3.7'
+- '3.6'
 install:
 - python setup.py install
 script:
-- python ./pygef/tests.py
-- python ./pygef/robertson/tests.py
-- python ./pygef/been_jeffrey/tests.py
+- python -m unittest pygef/tests.py
+- python -m unittest pygef/robertson/tests.py
+- python -m unittest pygef/been_jeffrey/tests.py
+
