Comply with `black` coding style and adding some badges (#36)
* Raise error when GEF is GEF-BOREHOLE-Report and not GEF-BORE-Report

* Adding remarks column when reading BORE-Reports

* Fixes in unit tests

* Remove travis badge from README

* Add some badges

* Black reformat only, added badge to readme

* Black reformat of upstream commits, add black and check to travis pipeline

* Fix in black --check

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: python
 python:
 - '3.6'
 install:
+- pip install black
 - python setup.py install
 script:
+- black --check .
 - python -m unittest pygef/tests.py
 - python -m unittest pygef/robertson/tests.py
 - python -m unittest pygef/been_jefferies/tests.py
