--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
 - '3.6'
 install:
-- pip install black
+- pip install -r requirements.txt
 - python setup.py install
 script:
 - black --check .
