--- a/.github/workflows/unit_tests_black.yaml
+++ b/.github/workflows/unit_tests_black.yaml
@@ -18,13 +18,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt coveralls
           python setup.py install
       - name: Formatting with black
         run: |
           black --check .
       - name: Test with unittest
-        run: |
-          python -m unittest pygef/tests.py
-          python -m unittest pygef/robertson/tests.py
-          python -m unittest pygef/been_jefferies/tests.py
+        run: coverage run --source=pygef -m unittest
+      - name: Post coverage results
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: coveralls --service=github
