--- a/.github/workflows/unit_tests_black.yaml
+++ b/.github/workflows/unit_tests_black.yaml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -15,15 +14,27 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1.0.7
+        with:
+          profile: default
+          toolchain: stable
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt coveralls
+          pip install -r requirements.txt coveralls maturin
           python setup.py install
       - name: Formatting with black
         run: |
           black --check .
-      - name: Test with unittest
+      - name: Test with unittest without Rust
+        run: coverage run --source=pygef -m unittest
+      - name: Build Rust wheel
+        run: |
+          maturin build -i $(which python)
+          cd target/wheels
+          pip install --force-reinstall -U *.whl
+      - name: Test with unittest with Rust
         run: coverage run --source=pygef -m unittest
       - name: Post coverage results
         env:
