--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -1,6 +1,6 @@
-name: Upload Python Package
+name: Release
 
-on:  
+on:
   push:
     tags:
       - '*'
@@ -14,6 +14,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: messense/maturin-action@v1
+        with:
+          maturin-version: latest
+          command: build
+          args: --release
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
