--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -72,5 +72,7 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PYTHON_FLAKE8: false
+          VALIDATE_JSCPD: false
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
