--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -23,7 +23,7 @@ jobs:
         with:
           maturin-version: latest
           command: build
-          args: --release
+          args: --release -o dist/
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
