--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -77,6 +77,7 @@ jobs:
           VALIDATE_MARKDOWN: false
           VALIDATE_JSCPD: false
           DEFAULT_BRANCH: master
+          VALIDATE_CSS: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test_docs:
