--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -71,8 +71,9 @@ jobs:
       - name: Lint
         uses: github/super-linter@v4
         env:
-          ACTIONS_RUNNER_DEBUG: true
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PYTHON_MYPY: false
+          VALIDATE_PYTHON_FLAKE8: false
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_PYTHON_ISORT: false
           VALIDATE_MARKDOWN: false
