--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 matplotlib >= 3.4.2
 pandas >= 1.1.5
-polars[pyarrow] == 0.10.23
+polars[pyarrow] == 0.11.0
 xmlschema == 1.9.1
 Sphinx >= 3.3.1
 sphinx-autodoc-typehints >= 1.11.1
 ipython >= 7.30.1
 asteroid-sphinx-theme >= 0.0.3
 sphinx_rtd_theme >= 1.0.0
+pytest>=6.2.5
+lxml>=4.7.1
