--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "maturin"
 name = "pygef"
 version = "0.7.3"
 dependencies = [
-    "polars>= 0.13.55",
+    "polars[pyarrow]>= 0.14.5",
     "matplotlib>= 3.4.2",
     "lxml==4.9.1",
 ]
