--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt coveralls
-          python setup.py install
+          maturin develop
 
       - name: Test without rust wheel
         run: coverage run --source=pygef -m unittest
@@ -99,7 +99,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python setup.py install
+          maturin develop
 
       - name: Build docs
         run: sphinx-build -b html docs public
