--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -3,7 +3,9 @@ name: Release
 on:
   push:
     tags:
-      - "pygef-v*"
+      - "*"
+    branches:
+      - master
 
 jobs:
   deploy:
@@ -14,10 +16,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.7"
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+
+      - name: Install dependencies
+        run: |
+          pip install setuptools wheel
+
+      - name: Build
         run: |
           python setup.py sdist bdist_wheel
-          twine upload --skip-existing dist/*
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
