--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pygef"
-version = "0.7.3"
+version = "0.8.0a1"
 dependencies = [
 	"polars[pyarrow]>=0.14.28",
 	"matplotlib>=3.4.2",
@@ -12,6 +12,12 @@ dependencies = [
 	"gef-file-to-map==0.1.0",
 ]
 requires-python = ">=3.7"
+license = { file = "LICENSE" }
+readme = "README.md"
+keywords = ["gef"]
+
+[project.urls]
+repository = "https://github.com/cemsbv/pygef"
 
 [tool.setuptools]
 py-modules = []
