--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pygef"
 version = "0.8.0a1"
+description = "Parse soil measurument data."
 dependencies = [
 	"polars[pyarrow]>=0.14.28",
 	"matplotlib>=3.4.2",
@@ -12,7 +13,7 @@ dependencies = [
 	"gef-file-to-map==0.1.0",
 ]
 requires-python = ">=3.7"
-license = { file = "LICENSE" }
+license = { file = "LICENSE.txt" }
 readme = "README.md"
 keywords = ["gef"]
 
