refactor: move to a src-based file structure

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           python setup.py install
 
       - name: Test
-        run: coverage run --source=pygef -m unittest
+        run: coverage run -m unittest
 
       - name: Post coverage results
         env:
