--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,10 +26,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-          python setup.py install
+          pip install .
 
       - name: Test
-        run: coverage run --source=pygef -m unittest
+        run: coverage run -m unittest
 
       - name: Post coverage results
         env:
@@ -82,7 +82,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-          python setup.py install
+          pip install .
 
       - name: Build docs
         run: sphinx-build -b html docs public
