--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -12,15 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.7
+      - name: Install python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
+          pip install .
 
       - name: Build docs
         run: sphinx-build -b html docs public
