--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,16 +17,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.7
+      - name: Install python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt coveralls
-          python setup.py install
+          python -m pip install --upgrade pip setuptools
+          pip install -r requirements.txt
+          pip install .
 
       - name: Test
         run: coverage run -m unittest
@@ -49,18 +49,23 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_PYTHON_MYPY: false
-          VALIDATE_PYTHON_FLAKE8: false
-          VALIDATE_PYTHON_PYLINT: false
-          VALIDATE_PYTHON_ISORT: false
-          VALIDATE_MARKDOWN: false
-          VALIDATE_JSCPD: false
           DEFAULT_BRANCH: master
+
+          VALIDATE_JSCPD: false
           VALIDATE_CSS: false
+          VALIDATE_BASH: false
+          VALIDATE_YAML: false
+          VALIDATE_PYTHON_PYLINT: false
+          VALIDATE_NATURAL_LANGUAGE: false
+          VALIDATE_MARKDOWN: false
+
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
           LINTER_RULES_PATH: /
-          PYTHON_MYPY_CONFIG_FILE: .mypy.ini
+          PYTHON_BLACK_CONFIG_FILE: pyproject.toml
+          PYTHON_ISORT_CONFIG_FILE: pyproject.toml
+          PYTHON_MYPY_CONFIG_FILE: pyproject.toml
+          PYTHON_FLAKE8_CONFIG_FILE: .flake8
 
   test_docs:
     name: Test docs
@@ -68,16 +73,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.7
+      - name: Install python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-          python setup.py install
+          pip install .
 
       - name: Build docs
         run: sphinx-build -b html docs public
