chore(pytest): use pytest for all test, omit tests in cov report

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           pip install .
 
       - name: Test
-        run: coverage run -m unittest
+        run: coverage run -m pytest
 
       - name: Post coverage results
         env:
