--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ alabaster==0.7.13
     # via sphinx
 asteroid-sphinx-theme==0.0.3
     # via pygef (pyproject.toml)
+asttokens==2.2.1
+    # via stack-data
 attrs==22.2.0
     # via pytest
-babel==2.12.0
+babel==2.12.1
     # via sphinx
 backcall==0.2.0
     # via ipython
@@ -22,6 +24,8 @@ charset-normalizer==3.0.1
     # via requests
 click==8.1.3
     # via black
+contourpy==1.0.7
+    # via matplotlib
 coverage==6.5.0
     # via coveralls
 coveralls==3.3.1
@@ -32,12 +36,14 @@ decorator==5.1.1
     # via ipython
 docopt==0.6.2
     # via coveralls
-docutils==0.17.1
+docutils==0.18.1
     # via
     #   sphinx
     #   sphinx-rtd-theme
 exceptiongroup==1.1.0
     # via pytest
+executing==1.2.0
+    # via stack-data
 fonttools==4.38.0
     # via matplotlib
 gef-file-to-map==0.1.0
@@ -48,9 +54,11 @@ imagesize==1.4.1
     # via sphinx
 importlib-metadata==6.0.0
     # via sphinx
+importlib-resources==5.12.0
+    # via matplotlib
 iniconfig==2.0.0
     # via pytest
-ipython==7.34.0
+ipython==8.11.0
     # via pygef (pyproject.toml)
 isort==5.12.0
     # via pygef (pyproject.toml)
@@ -64,7 +72,7 @@ lxml==4.9.1
     # via pygef (pyproject.toml)
 markupsafe==2.1.2
     # via jinja2
-matplotlib==3.5.2
+matplotlib==3.7.0
     # via pygef (pyproject.toml)
 matplotlib-inline==0.1.6
     # via ipython
@@ -72,6 +80,7 @@ mypy-extensions==1.0.0
     # via black
 numpy==1.24.2
     # via
+    #   contourpy
     #   matplotlib
     #   pyarrow
 packaging==23.0
@@ -100,6 +109,8 @@ prompt-toolkit==3.0.38
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
+pure-eval==0.2.2
+    # via stack-data
 pyarrow==11.0.0
     # via polars
 pygments==2.14.0
@@ -120,15 +131,15 @@ six==1.16.0
     # via python-dateutil
 snowballstemmer==2.2.0
     # via sphinx
-sphinx==5.1.1
+sphinx==6.1.3
     # via
     #   asteroid-sphinx-theme
     #   pygef (pyproject.toml)
     #   sphinx-autodoc-typehints
     #   sphinx-rtd-theme
-sphinx-autodoc-typehints==1.19.1
+sphinx-autodoc-typehints==1.22
     # via pygef (pyproject.toml)
-sphinx-rtd-theme==1.0.0
+sphinx-rtd-theme==1.2.0
     # via pygef (pyproject.toml)
 sphinxcontrib-applehelp==1.0.4
     # via sphinx
@@ -136,12 +147,16 @@ sphinxcontrib-devhelp==1.0.2
     # via sphinx
 sphinxcontrib-htmlhelp==2.0.1
     # via sphinx
+sphinxcontrib-jquery==2.0.0
+    # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-qthelp==1.0.3
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
+stack-data==0.6.2
+    # via ipython
 tomli==2.0.1
     # via
     #   black
@@ -159,7 +174,9 @@ urllib3==1.26.14
 wcwidth==0.2.6
     # via prompt-toolkit
 zipp==3.15.0
-    # via importlib-metadata
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
