--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -2,14 +2,12 @@ name: Release
 
 on:
   push:
-    tags:
-      - "*"
-    branches:
-      - master
+    tags: ['[0-9].[0-9]+.[0-9]+.*']
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
