--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -2,12 +2,11 @@ name: Release
 
 on:
   push:
-    tags: ['[0-9].[0-9]+.[0-9]+.*']
+    tags: ['*']
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
