--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pygef"
-version = "0.8.0a4"
+version = "0.8.0a5"
 description = "Parse soil measurument data."
 dependencies = [
     "polars[pyarrow]>=0.14.28",
@@ -36,6 +36,7 @@ lint = [
     "black",
     "isort",
 ]
+map = ["contextily>=1.3.0"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -77,6 +78,7 @@ module = [
     "numpy.*",
     "gef_file_to_map.*",
     "pytest.*",
-    "setuptools.*"
+    "setuptools.*",
+    "contextily.*"
 ]
 ignore_missing_imports = true
