--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ exceptiongroup==1.1.1
     # via pytest
 executing==1.2.0
     # via stack-data
-fonttools==4.39.0
+fonttools==4.39.2
     # via matplotlib
 gef-file-to-map==0.1.0
     # via pygef (pyproject.toml)
@@ -120,7 +120,7 @@ packaging==23.0
     #   sphinx
 parso==0.8.3
     # via jedi
-pathspec==0.11.0
+pathspec==0.11.1
     # via black
 pexpect==4.8.0
     # via ipython
@@ -177,6 +177,7 @@ sphinx==6.1.3
     #   pygef (pyproject.toml)
     #   sphinx-autodoc-typehints
     #   sphinx-rtd-theme
+    #   sphinxcontrib-jquery
 sphinx-autodoc-typehints==1.22
     # via pygef (pyproject.toml)
 sphinx-rtd-theme==1.2.0
@@ -187,7 +188,7 @@ sphinxcontrib-devhelp==1.0.2
     # via sphinx
 sphinxcontrib-htmlhelp==2.0.1
     # via sphinx
-sphinxcontrib-jquery==2.0.0
+sphinxcontrib-jquery==4.1
     # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
