--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ name = "pygef"
 version = "0.8.0"
 description = "Parse soil measurument data."
 dependencies = [
-    "polars[pyarrow]>=0.16.3",
-    "matplotlib>=3.6.0",
-    "lxml==4.9.1",
-    "gef-file-to-map==0.1.0",
+    "polars[pyarrow]>=0.16.3,<0.17",
+    "matplotlib>=3.6,<4.0",
+    "lxml>=4.9.1,<5.0",
+    "gef-file-to-map>=0.1,<0.2",
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
