--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ version = "0.8.0"
 description = "Parse soil measurument data."
 dependencies = [
     "polars[pyarrow]>=0.16.3,<0.17",
-    "matplotlib>=3.6,<4.0",
+    "matplotlib>=3.6.0,<4.0",
     "lxml>=4.9.1,<5.0",
-    "gef-file-to-map>=0.1,<0.2",
+    "gef-file-to-map>=0.1.0,<0.2",
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
@@ -23,7 +23,11 @@ repository = "https://github.com/cemsbv/pygef"
 [project.optional-dependencies]
 test = [
     "coveralls",
-    "pytest"
+    "pytest",
+    "polars[pyarrow]==0.16.3",
+    "matplotlib==3.6.0",
+    "lxml==4.9.1",
+    "gef-file-to-map==0.1.0"
 ]
 docs = [
     "Sphinx==6.1.3",
