--- a/requirements.txt
+++ b/requirements.txt
@@ -75,8 +75,6 @@ imagesize==1.4.1
     # via sphinx
 importlib-metadata==6.1.0
     # via sphinx
-importlib-resources==5.12.0
-    # via matplotlib
 iniconfig==2.0.0
     # via pytest
 ipython==8.11.0
@@ -91,11 +89,11 @@ joblib==1.2.0
     # via contextily
 kiwisolver==1.4.4
     # via matplotlib
-lxml==4.9.2
+lxml==4.9.1
     # via pygef (pyproject.toml)
 markupsafe==2.1.2
     # via jinja2
-matplotlib==3.7.1
+matplotlib==3.6.0
     # via
     #   contextily
     #   pygef (pyproject.toml)
@@ -134,7 +132,7 @@ platformdirs==3.1.1
     # via black
 pluggy==1.0.0
     # via pytest
-polars[pyarrow]==0.16.14
+polars[pyarrow]==0.16.3
     # via pygef (pyproject.toml)
 prompt-toolkit==3.0.38
     # via ipython
@@ -217,9 +215,7 @@ wcwidth==0.2.6
 xyzservices==2023.2.0
     # via contextily
 zipp==3.15.0
-    # via
-    #   importlib-metadata
-    #   importlib-resources
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
