--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,8 +31,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install .[test]
-          pip install .[map]
+          # shellcheck disable=SC2102
+          pip install .[test] .[map]
 
       - name: Test
         run: coverage run -m pytest
