--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,19 +14,25 @@ jobs:
   test:
     name: Unit test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.9
+      - name: Install python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
-          pip install -r requirements.txt
-          pip install .
+          # shellcheck disable=SC2102
+          pip install .[test] .[map]
 
       - name: Test
         run: coverage run -m pytest
