--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pygef"
 version = "0.8.1"
 description = "Parse soil measurument data."
 dependencies = [
-    "polars[pyarrow]>=0.16.3,<0.19",
+    "polars[pyarrow]>0.16.14,<0.19",
     "matplotlib>=3.6,<4.0",
     "lxml>=4.9.1,<5.0",
     "gef-file-to-map>=0.1,<0.2",
