--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ lint = [
     "isort",
 ]
 map = ["contextily>=1.3.0"]
+json = ["pydantic>=1.8.2,<2.0.0"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
