--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.6,<4.0",
     "lxml>=4.9.1,<5.0",
     "gef-file-to-map>=0.1,<0.2",
+    "pydantic>=2.0.0"
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
@@ -37,7 +38,6 @@ lint = [
     "isort",
 ]
 map = ["contextily>=1.3.0"]
-json = ["pydantic>=1.8.2,<2.0.0"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
