--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -25,11 +25,19 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install setuptools twine
+          pip install setuptools build
 
-      - name: Build
-        run: |
-          python setup.py sdist
+      - name: Build a binary wheel and a source tarball
+        run: python3 -m build
 
-      - name: Publish to PyPi
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+
+      - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
