--- a/requirements.txt
+++ b/requirements.txt
@@ -6,25 +6,33 @@
 #
 affine==2.4.0
     # via rasterio
+aiohttp==3.9.1
+    # via black
+aiosignal==1.3.1
+    # via aiohttp
 alabaster==0.7.13
     # via sphinx
 asteroid-sphinx-theme==0.0.3
     # via pygef (pyproject.toml)
-asttokens==2.4.0
+asttokens==2.4.1
     # via stack-data
+async-timeout==4.0.3
+    # via aiohttp
 attrs==23.1.0
-    # via rasterio
-babel==2.13.0
+    # via
+    #   aiohttp
+    #   rasterio
+babel==2.14.0
     # via sphinx
 backcall==0.2.0
     # via ipython
-black==23.9.1
+black==23.12.0
     # via pygef (pyproject.toml)
-certifi==2023.7.22
+certifi==2023.11.17
     # via
     #   rasterio
     #   requests
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via
@@ -39,7 +47,7 @@ cligj==0.7.2
     # via rasterio
 contextily==1.4.0
     # via pygef (pyproject.toml)
-contourpy==1.1.1
+contourpy==1.2.0
     # via matplotlib
 coverage==6.5.0
     # via coveralls
@@ -55,31 +63,37 @@ docutils==0.18.1
     # via
     #   sphinx
     #   sphinx-rtd-theme
-exceptiongroup==1.1.3
+exceptiongroup==1.2.0
     # via pytest
-executing==2.0.0
+executing==2.0.1
     # via stack-data
-fonttools==4.43.1
+fonttools==4.47.0
     # via matplotlib
+frozenlist==1.4.1
+    # via
+    #   aiohttp
+    #   aiosignal
 gef-file-to-map==0.1.0
     # via pygef (pyproject.toml)
 geographiclib==2.0
     # via geopy
-geopy==2.4.0
+geopy==2.4.1
     # via contextily
-idna==3.4
-    # via requests
+idna==3.6
+    # via
+    #   requests
+    #   yarl
 imagesize==1.4.1
     # via sphinx
-importlib-metadata==6.8.0
+importlib-metadata==7.0.0
     # via sphinx
-importlib-resources==6.1.0
+importlib-resources==6.1.1
     # via matplotlib
 iniconfig==2.0.0
     # via pytest
 ipython==8.11.0
     # via pygef (pyproject.toml)
-isort==5.12.0
+isort==5.13.2
     # via pygef (pyproject.toml)
 jedi==0.19.1
     # via ipython
@@ -89,11 +103,11 @@ joblib==1.3.2
     # via contextily
 kiwisolver==1.4.5
     # via matplotlib
-lxml==4.9.3
+lxml==4.9.4
     # via pygef (pyproject.toml)
 markupsafe==2.1.3
     # via jinja2
-matplotlib==3.8.0
+matplotlib==3.8.2
     # via
     #   contextily
     #   pygef (pyproject.toml)
@@ -101,9 +115,13 @@ matplotlib-inline==0.1.6
     # via ipython
 mercantile==1.2.1
     # via contextily
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
 mypy-extensions==1.0.0
     # via black
-numpy==1.26.0
+numpy==1.26.2
     # via
     #   contourpy
     #   matplotlib
@@ -118,31 +136,31 @@ packaging==23.2
     #   sphinx
 parso==0.8.3
     # via jedi
-pathspec==0.11.2
+pathspec==0.12.1
     # via black
-pexpect==4.8.0
+pexpect==4.9.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pillow==10.0.1
+pillow==10.1.0
     # via
     #   contextily
     #   matplotlib
-platformdirs==3.11.0
+platformdirs==4.1.0
     # via black
 pluggy==1.3.0
     # via pytest
-polars[pyarrow]==0.19.7
+polars[pyarrow]==0.19.19
     # via pygef (pyproject.toml)
-prompt-toolkit==3.0.39
+prompt-toolkit==3.0.43
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pyarrow==13.0.0
+pyarrow==14.0.2
     # via polars
-pygments==2.16.1
+pygments==2.17.2
     # via
     #   ipython
     #   sphinx
@@ -150,11 +168,11 @@ pyparsing==3.1.1
     # via
     #   matplotlib
     #   snuggs
-pytest==7.4.2
+pytest==7.4.3
     # via pygef (pyproject.toml)
 python-dateutil==2.8.2
     # via matplotlib
-rasterio==1.3.8
+rasterio==1.3.9
     # via contextily
 requests==2.31.0
     # via
@@ -205,18 +223,20 @@ tomli==2.0.1
     # via
     #   black
     #   pytest
-traitlets==5.11.2
+traitlets==5.14.0
     # via
     #   ipython
     #   matplotlib-inline
-typing-extensions==4.8.0
+typing-extensions==4.9.0
     # via black
-urllib3==2.0.6
+urllib3==2.1.0
     # via requests
-wcwidth==0.2.8
+wcwidth==0.2.12
     # via prompt-toolkit
-xyzservices==2023.10.0
+xyzservices==2023.10.1
     # via contextily
+yarl==1.9.4
+    # via aiohttp
 zipp==3.17.0
     # via
     #   importlib-metadata
