--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ name = "pygef"
 version = "0.10.1"
 description = "Parse soil measurument data."
 dependencies = [
-    "polars[pyarrow]>0.16.14,<0.20",
+    "polars[pyarrow]>1,<2",
     "matplotlib>=3.6,<4.0",
-    "lxml>=4.9.1,<5.0",
+    "lxml>=5,<6.0",
     "gef-file-to-map>=0.1,<0.2",
 ]
 requires-python = ">=3.9"
@@ -26,11 +26,11 @@ test = [
     "pytest"
 ]
 docs = [
-    "Sphinx==6.1.3",
-    "sphinx-autodoc-typehints==1.22",
-    "ipython==8.11.0",
-    "asteroid-sphinx-theme==0.0.3",
-    "sphinx_rtd_theme==1.2.0"
+    "Sphinx",
+    "sphinx-autodoc-typehints",
+    "ipython",
+    "asteroid-sphinx-theme",
+    "sphinx_rtd_theme"
 ]
 lint = [
     "black",
