--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,7 @@ jobs:
           - '3.9'
           - '3.10'
           - '3.11'
+          - "3.12"
     steps:
       - uses: actions/checkout@v3
 
@@ -90,10 +91,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.9
+      - name: Install python 3.12
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
