--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -64,7 +64,7 @@ jobs:
           fetch-depth: 0
 
       - name: Lint
-        uses: github/super-linter@v5
+        uses: super-linter/super-linter:v6
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: master
