build: downgrade top-level permissions

--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -5,10 +5,13 @@ on:
     branches:
       - master
 
+permissions: read-all
+
 jobs:
   deploy_docs:
     name: Deploy docs
     runs-on: ubuntu-20.04
+    permissions: write-all
     steps:
       - uses: actions/checkout@v3
 
