--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -4,10 +4,11 @@ on:
   push:
     tags: ['*']
 
+permissions: read-all
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     environment:
       name: release
 
