chore(deps): update dependencies (#374)
* chore(deps): update polars

* chore(deploy): update python-version

* style(lint): lint with black and isort

* style(lint): update super-linter

* fix: update path to docker image

* build: downgrade top-level permissions

--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -5,17 +5,20 @@ on:
     branches:
       - master
 
+permissions: read-all
+
 jobs:
   deploy_docs:
     name: Deploy docs
     runs-on: ubuntu-20.04
+    permissions: write-all
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.9
+      - name: Install python 3.12
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
