--- a/.github/workflows/release_pypi.yaml
+++ b/.github/workflows/release_pypi.yaml
@@ -4,10 +4,11 @@ on:
   push:
     tags: ['*']
 
+permissions: read-all
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     environment:
       name: release
 
@@ -20,7 +21,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
