--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,8 @@ on:
       - "docs/**"
       - "**.md"
 
+permissions: read-all
+
 jobs:
   test:
     name: Unit test
@@ -20,6 +22,7 @@ jobs:
           - '3.9'
           - '3.10'
           - '3.11'
+          - "3.12"
     steps:
       - uses: actions/checkout@v3
 
@@ -63,7 +66,7 @@ jobs:
           fetch-depth: 0
 
       - name: Lint
-        uses: github/super-linter@v5
+        uses: super-linter/super-linter@v6
         env:
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: master
@@ -90,10 +93,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install python 3.9
+      - name: Install python 3.12
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
