--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ name = "pygef"
 version = "0.11.0"
 description = "Parse soil measurument data."
 dependencies = [
-    "polars>1,<2",
+    "polars>=1,<2",
     "matplotlib>=3.6,<4.0",
     "lxml>=5,<6.0",
-    "gef-file-to-map>=0.1,<0.2",
+    "gef-file-to-map>=0.2,<0.3",
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
