--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ version = "0.11.0"
 description = "Parse soil measurument data."
 dependencies = [
     "polars>=1,<2",
-    "matplotlib>=3.6,<4.0",
     "lxml>=5,<6.0",
     "gef-file-to-map>=0.2,<0.3",
 ]
@@ -21,6 +20,9 @@ keywords = ["gef"]
 repository = "https://github.com/cemsbv/pygef"
 
 [project.optional-dependencies]
+plot = [
+    "matplotlib>=3.6,<4.0",
+]
 test = [
     "coveralls",
     "pytest"
@@ -62,13 +64,6 @@ warn_unused_ignores = true
 warn_unused_configs = true
 disallow_subclassing_any = true
 no_implicit_optional = true
-#disallow_untyped_defs = true
-#strict_concatenate = true
-#disallow_any_generics = true
-#disallow_untyped_calls = true
-#warn_return_any = true
-#no_implicit_reexport = true
-#strict_equality = true
 
 [[tool.mypy.overrides]]
 module = [
