--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ name = "pygef"
 version = "0.11.0"
 description = "Parse soil measurument data."
 dependencies = [
-    "polars>=1,<2",
-    "matplotlib>=3.6,<4.0",
-    "lxml>=5,<6.0",
-    "gef-file-to-map>=0.2,<0.3",
+  "polars>=1,<2",
+  "matplotlib>=3.6,<4.0",
+  "lxml>=5,<6.0",
+  "gef-file-to-map>=0.2,<0.3",
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
@@ -21,24 +21,21 @@ keywords = ["gef"]
 repository = "https://github.com/cemsbv/pygef"
 
 [project.optional-dependencies]
-test = [
-    "coveralls",
-    "pytest"
-]
+test = ["coveralls", "pytest"]
 docs = [
-    "Sphinx",
-    "sphinx-autodoc-typehints",
-    "ipython",
-    "asteroid-sphinx-theme",
-    "sphinx_rtd_theme"
+  "Sphinx",
+  "sphinx-autodoc-typehints",
+  "ipython",
+  "asteroid-sphinx-theme",
+  "sphinx_rtd_theme",
 ]
 lint = [
-    # https://github.com/super-linter/super-linter/blob/main/dependencies/python/black.txt
-    "black==24.8.0",
-    # https://github.com/super-linter/super-linter/blob/main/dependencies/python/isort.txt
-    "isort==5.13.2",
+  # https://github.com/super-linter/super-linter/blob/main/dependencies/python/black.txt
+  "black==25.1.0",
+  # https://github.com/super-linter/super-linter/blob/main/dependencies/python/isort.txt
+  "isort==6.0.0",
 ]
-map = ["contextily>=1.3.0"]
+map = ["contextily>=1.3.0,<2"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -72,15 +69,15 @@ no_implicit_optional = true
 
 [[tool.mypy.overrides]]
 module = [
-    "matplotlib.*",
-    "pkg_resources.*",
-    "pandas.*",
-    "lxml.*",
-    "polars.*",
-    "numpy.*",
-    "gef_file_to_map.*",
-    "pytest.*",
-    "setuptools.*",
-    "contextily.*"
+  "matplotlib.*",
+  "pkg_resources.*",
+  "pandas.*",
+  "lxml.*",
+  "polars.*",
+  "numpy.*",
+  "gef_file_to_map.*",
+  "pytest.*",
+  "setuptools.*",
+  "contextily.*",
 ]
 ignore_missing_imports = true
