--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           # shellcheck disable=SC2102
-          pip install .[test] .[map]
+          pip install .[test] .[map] .[plot]
 
       - name: Test
         run: coverage run -m pytest
