--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ name = "pygef"
 version = "0.11.1"
 description = "Parse soil measurument data."
 dependencies = [
-  "polars>=1,<2",
-  "matplotlib>=3.6,<4.0",
-  "lxml>=5,<6.0",
-  "gef-file-to-map>=0.2,<0.3",
+    "polars>=1,<2",
+    "lxml>=5,<6.0",
+    "gef-file-to-map>=0.2,<0.3",
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE.txt" }
@@ -21,6 +20,9 @@ keywords = ["gef"]
 repository = "https://github.com/cemsbv/pygef"
 
 [project.optional-dependencies]
+plot = [
+    "matplotlib>=3.6,<4.0",
+]
 test = ["coveralls", "pytest"]
 docs = [
   "Sphinx",
@@ -59,13 +61,6 @@ warn_unused_ignores = true
 warn_unused_configs = true
 disallow_subclassing_any = true
 no_implicit_optional = true
-#disallow_untyped_defs = true
-#strict_concatenate = true
-#disallow_any_generics = true
-#disallow_untyped_calls = true
-#warn_return_any = true
-#no_implicit_reexport = true
-#strict_equality = true
 
 [[tool.mypy.overrides]]
 module = [
