chore(python)!: drop support for Python 3.9 & 3.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ version = "0.13.0"
 description = "Parse soil measurument data."
 dependencies = ["polars>=1,<2", "lxml>=5,<7.0", "gef-file-to-map>=0.2.1,<0.3"]
 requires-python = ">=3.9"
+dependencies = ["polars>=1,<2", "lxml>=5,<7", "gef-file-to-map>=1,<2"]
+requires-python = ">=3.11,<3.15"
 license = { file = "LICENSE.txt" }
 readme = "README.md"
 keywords = ["gef"]
@@ -17,6 +19,7 @@ repository = "https://github.com/cemsbv/pygef"
 
 [project.optional-dependencies]
 plot = ["matplotlib>=3.6,<4.0"]
+plot = ["matplotlib>=3.6,<4"]
 test = ["coveralls", "pytest"]
 docs = [
   "Sphinx",
