--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ repository = "https://github.com/cemsbv/pygef"
 
 [project.optional-dependencies]
 plot = ["matplotlib>=3.6,<4"]
-test = ["coveralls", "pytest"]
+test = ["coveralls>=3,<4", "pytest>=8,<9"]
 docs = [
   "Sphinx",
   "sphinx-autodoc-typehints",
