--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -77,6 +77,7 @@ jobs:
           VALIDATE_BIOME_LINT: false
           VALIDATE_CSS: false
           VALIDATE_CSS_PRETTIER: false
+          VALIDATE_GITHUB_ACTIONS_ZIZMOR: false
           VALIDATE_GRAPHQL: false
           VALIDATE_GRAPHQL_PRETTIER: false
           VALIDATE_HTML: false
